--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -3,3 +3,26 @@
 	margin: auto;
 	width: 75%;
 }
+
+body {
+	margin: 0;
+	background: white;
+	overflow: hidden;
+}
+
+.popup
+{
+	opacity: 0;
+	transition: opacity 0.5s linear;
+	margin-top: 10px;
+	position: absolute;
+	width: 100%;
+	z-index: -100;
+	text-align: center;
+}
+
+.popup.shown {
+	opacity: 1;
+	z-index: 100;
+	visibility: visible;
+}
