--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -2,6 +2,15 @@
 	text-align: center;
 	margin: auto;
 	width: 75%;
+	opacity: 1;
+	z-index: 100;
+	transition: all 0.125s ease-in-out;
+}
+
+#general-info.down {
+	opacity: 0;
+	z-index: -100;
+	transform: translateY(10vh);
 }
 
 body {
