--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,10 +1,30 @@
-#general-info {
+*
+{
 	text-align: center;
+}
+
+#general-info {
 	margin: auto;
 	width: 75%;
 	opacity: 1;
 	z-index: 100;
 	transition: all 0.125s ease-in-out;
+}
+
+.underlineable{
+	display: inline-block;
+}
+
+.underline {
+	display: block;
+	height: 2px;
+	margin: 0 auto;
+	width: 0;
+	transition: width .25s linear;
+}
+
+*:hover>.underline, .active {
+	width: 100%;
 }
 
 #general-info.down {
@@ -16,7 +36,7 @@
 body {
 	margin: 0;
 	background: white;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 .popup
