--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -48,10 +48,42 @@ body {
 	width: 100%;
 	z-index: -100;
 	text-align: center;
+	visibility: hidden;
+	display: none;
 }
 
 .popup.shown {
 	opacity: 1;
 	z-index: 100;
 	visibility: visible;
+	display: inherit;
+}
+
+.modal-data
+{
+	display: none;
+}
+
+.modal {
+	pointer-events: none;
+	opacity: 0;
+    position: absolute;
+    z-index: -1000;
+    background: red;
+    border-radius: 20px;
+    border: 2px solid white;
+	margin-top: 20px;
+    left: 50%;
+    top: 50%;
+    transition: opacity .25s linear;
+    transform: translateX(-50%) translateY(-50%);
+    overflow: hidden;
+    box-shadow: 0 0 100px 10px black inset;
+	width: 80vw;
+}
+
+.modal.open
+{
+	opacity: 100;
+	z-index: 1000;
 }
