--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -66,13 +66,12 @@ body {
 }
 
 .modal {
-	pointer-events: none;
 	opacity: 0;
     position: absolute;
     z-index: -1000;
     background: red;
     border-radius: 20px;
-    border: 2px solid white;
+    border: 2px solid black;
 	margin-top: 20px;
     left: 50%;
     top: 50%;
@@ -87,4 +86,23 @@ body {
 {
 	opacity: 100;
 	z-index: 1000;
+}
+
+.glass-pane
+{
+	left: 50%;
+    top: 50%;
+    transition: opacity .25s linear;
+    transform: translateX(-50%) translateY(-50%);
+	background: rgba(0, 102, 255, 0.5);
+	z-index: 110;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	display: none;
+}
+
+.glass-pane.shown
+{
+	display: inherit;
 }
