--- a/stylesheets/about-us.css
+++ b/stylesheets/about-us.css
@@ -1,7 +1,6 @@
-#aboutUs {
-  margin: auto; 
-  width: 75%; 
-  opacity: 1;
-  z-index: 100%
-  
+#about-us {
+	background-color: rgb(241, 239, 239);
+	opacity: 1;
+	z-index: 100;
+	
 }
