--- a/stylesheets/modal.css
+++ b/stylesheets/modal.css
@@ -5,6 +5,7 @@
 
 .modal {
 	pointer-events: none;
+	touch-action: none;
 	opacity: 0;
     position: fixed;
     z-index: 1000;
@@ -25,18 +26,25 @@
 .modal.open
 {
 	pointer-events: all;
+	touch-action: all;
 	opacity: 100;
+}
+
+#modal-dialogue {
+	overflow-y: auto;
+	max-height: 80vh;
 }
 
 .glass-pane
 {
 	pointer-events: none;
+	touch-action: none;
     transition: opacity .25s linear;
 	background: rgba(0, 102, 255, 0.5);
 	z-index: 110;
 	position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     top: 0px;
     left: 0px;
 	opacity: 0;
@@ -44,14 +52,16 @@
 
 .glass-pane.shown
 {
+	touch-action: all;
 	pointer-events: all;
 	opacity: 1;
 }
 
-#closeModalButton {
+#closeModalButton
+{
 	position: absolute;
     top: 0;
-    right: 0;
+	right: 0;
     width: 40px;
     line-height: 20px;
     margin: 0;
@@ -63,16 +73,17 @@
 	font-size: 15px;
 }
 
-#modal-dialogue p {
+#modal-dialogue p
+{
 	color: rgb(250, 232, 235);
 	width: 90%;
 	margin: auto; 
 	margin-top: 2%; 
 }
 
-ol{
+ol
+{
 	color: rgb(250, 232, 235);
 	display: table;
 	margin: 0 auto;
-	
 }
