--- a/stylesheets/popup.css
+++ b/stylesheets/popup.css
@@ -1,4 +1,5 @@
-.popup {
+.popup
+{
 	margin: auto;
 	width: 75%;
 	z-index: -100;
@@ -10,7 +11,8 @@
 	display:none;
 }
 
-.popup.shown {
+.popup.shown
+{
 	z-index: 100;
 	display: inherit;
 }
