--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -45,6 +45,48 @@ button, .clickable
 	background-color: rgb(59, 59, 87);
 	color: rgb(252, 252, 252);
 	width: 126px;
+	border-style: outset;
+	border-top-color: rgb(133, 133, 133);
+	border-left-color: rgb(133, 133, 133);
+	border-bottom-color: rgb(118, 118, 118);
+	border-right-color: rgb(118, 118, 118);
+	-webkit-appearance: none;
+    border-radius: 0;
+}
+
+@media (max-width: 700px)
+{
+	button, .clickable {
+		width: 16.75vw;
+	}
+}
+
+@media (max-width: 500px)
+{
+	.navbutton {
+		font-size: 70%;
+	}
+}
+
+@media (max-width: 435px)
+{
+	.navbutton {
+		font-size: 60%;
+	}
+}
+
+@media (max-width: 380px)
+{
+	.navbutton {
+		font-size: 50%;
+	}
+}
+
+@media (max-width: 330px)
+{
+	.navbutton {
+		font-size: 45%;
+	}
 }
 
 .underlineable
